--- a/bookmarks/account/templates/base.html
+++ b/bookmarks/account/templates/base.html
@@ -14,10 +14,10 @@
             <a href="{% url "dashboard" %}">My dashboard</a>
           </li>
           <li {% if section == "images" %}class="selected"{% endif %}>
-            <a href="#">Images</a>
+            <a href="{% url "images:list" %}">Images</a>
           </li>
           <li {% if section == "people" %}class="selected"{% endif %}>
-            <a href="#">People</a>
+            <a href="{% url "user_list" %}">People</a>
           </li>
         </ul>
       {% endif %}
@@ -33,9 +33,30 @@
         {% endif %}
       </span>
     </div>
+
+    {% if messages %}
+      <ul class="messages">
+        {% for message in messages %}
+          <li class="{{ message.tags }}">
+            {{ message|safe }}
+            <a href="#" class="close">X</a>
+          </li>
+        {% endfor %}
+      </ul>
+    {% endif %}
+
     <div id="content">
       {% block content %}
       {% endblock %}
     </div>
+
+  <script src="//cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
+  <script>
+    const csrftoken = Cookies.get('csrftoken');
+    document.addEventListener('DOMContentLoaded', event => {
+      // DOM загружен
+      {% block dom_ready %}{% endblock %}
+    })
+  </script>
   </body>
 </html>
