--- a/bookmarks/account/templates/registration/login.html
+++ b/bookmarks/account/templates/registration/login.html
@@ -26,4 +26,12 @@
     </form>
   <p><a href="{% url "password_reset" %}">Forgotten your password?</a></p>
   </div>
+  <div class="social">
+  <ul>
+    <li class="google">
+      <a href="{% url "social:begin" "google-oauth2" %}">Sign in with Google</a>
+    </li>
+  </ul>
+
+  </div>
 {% endblock %}
